# libFreeImage

./: .gitignore  CMakeLists.txt  FreeImage.pro  FreeImage.rc  FreeImageLite.pri  README.md  TargetArch.cmake
Source/: CacheFile.h  FreeImage.h  FreeImageIO.h  FreeImageLite.h  Plugin.h  ToneMapping.h  Utilities.h  zlib_oscode.h
Source/DeprecationManager/: Deprecated.cpp  DeprecationMgr.cpp  DeprecationMgr.h
Source/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  Conversion.cpp  FreeImage.cpp  FreeImageIO.cpp  GetType.cpp  MultiPage.cpp  PSDParser.h  Plugin.cpp  PluginBMP.cpp  PluginGIF.cpp  PluginJPEG.cpp  PluginPNG.cpp  PluginQOI.cpp  ZLibInterface.cpp  freeimage_misc.cpp  tmoReinhard05.cpp
Source/FreeImageToolkit/: Background.cpp  ClassicRotate.cpp
Source/LibPNG/: pngpriv.h  pngstruct.h
Source/Metadata/: Exif.cpp  TagConversion.cpp  TagLib.cpp
Wrapper/VB6/src/: MFreeImage.bas  MFreeImageLite.bas
test/: CMakeLists.txt  load_file.cpp
